--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+    background-color: blanchedalmond;
+    margin: 10;
+    padding: 10;
+    text-align: center;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+ }
+a {
+    text-decoration: solid;
+}
+ a:hover {
+    text-align: left;
+    background-color: deeppink;
+    color: blanchedalmond;
+ }
